--- a/FootballManagerHTML/new_components.html
+++ b/FootballManagerHTML/new_components.html
@@ -584,50 +584,97 @@
 
     function generateCharacters() {
         const characterList = document.getElementById("characterList");
-
-        // Nombre de personnages à générer
         const numCharacters = 50;
-
-        // Tableaux de noms, prénoms et âges
         const names = ["Mohammed", "Walter", "Ethan", "Mateo", "Noah", "Liam", "Luca", "Gabriel", "Alexander", "Gustavo", "Felix", "Hiroshi", "Ismail", "Aiden", "Ali", "Mathias", "David", "Youssef", "Seung", "Jan", "Dimitri", "Miguel", "Ahmed", "Henrik", "Thiago", "Finn", "Ibrahim", "Valentin", "Andrei", "Kamil", "Javier", "Benjamin", "Oliver", "William", "James", "Henry", "Daniel", "Samuel", "Joseph", "Leo", "Oscar", "Sebastian", "Max", "Elijah", "Adam", "Antonio", "Hugo", "Isaac", "Elijah", "Giovanni", "Raphael", "Kai", "Caleb", "Emmanuel", "Victor", "Santiago", "Xavier", "Elias", "Lucas", "Christopher", "Daniel", "Alexandre", "Ethan", "Noah", "Liam", "Lucas", "Benjamin", "Alexander", "Samuel", "Gabriel", "Joseph", "Mathias", "Adam", "Leo", "Isaac", "Victor", "Raphael", "Xavier", "Sebastian", "Caleb", "David", "Todd", "Maxime", "Nicolas", "Thomas", "Antoine", "Hugo", "Nathan", "Olivier", "Justin", "Louis", "Vincent", "Pierre"];
         const lastNames = ["Johnson", "Davis", "Thompson", "Rodriguez", "Martinez", "Jackson", "Makarov", "Freeman", "Fring", "Anderson", "Wilson", "Taylor", "Thomas", "Moore", "Walker", "Hill", "Lewis", "Young", "Harris", "Clark", "Turner", "Allen", "Baker", "Campbell", "Carter", "Edwards", "Foster", "Gray", "Howard", "Jenkins", "King", "Morgan", "Smith", "Brown", "Lee", "Adams", "Wright", "Harris", "Parker", "Morris", "Rogers", "Cooper", "Bennett", "Flores", "Bryant", "Stewart", "Reed", "Cook", "Rice", "Griffin", "Ward", "Perez", "Bell", "Scott", "Turner", "Reyes", "Gonzalez", "Murphy", "Collins", "Hughes", "Long", "Anderson", "Clark", "Evans", "Gonzalez", "Hall", "Johnson", "Kelly", "Lewis", "Mitchell", "Nelson", "Parker", "Ramirez", "Roberts", "Sanders", "Turner", "White", "Young", "Adams", "Baker", "Carter", "Davis", "Edwards", "Foster", "Gray", "Hayes", "Jackson", "King", "Morgan", "Price", "Stewart"];
-        const postes = ["Gardien de but", "Arrière latéral", "Piston", "Défenseur central", "Libéro", "Milieu central", "Milieu latéral", "Milieu défensif", "Milieu offensif", "Avant-centre", "Attaquant de soutien", "Ailier", "Buteur"]
-        const minAge = 16; // 16 ans min pour la génération, en dessous de ça les joueurs ne peuvent pas jouer légalement en pro
-        const maxAge = 50; // 40 ans max pour la génération, les joueurs doivent partir à la retraite avant 45 ans ce qui donne 5 saisons de plus à la personne achetant un joueur a 40 ans
-        const minNoteGenerale = 40; // 40 de général min pour la génération, en dessous les joueurs sont soit trop nuls, soit à la retraite
-        const maxNoteGenerale = 100; // 100 de général max pour la génération, même si on peut aller à 110 max via plusieurs solutions in game
-        const minCompetence = 0; // nombre de compétences que le joueur possède, elles seront affichées dans la table footballeur_competences
-        const maxCompetence = 5; // nombre de compétences que le joueur possède, elles seront affichées dans la table footballeur_competences
+        const postes = [
+            "Gardien de but",
+            "Arrière latéral",
+            "Piston",
+            "Défenseur central",
+            "Libéro",
+            "Milieu central",
+            "Milieu latéral",
+            "Milieu défensif",
+            "Milieu offensif",
+            "Avant-centre",
+            "Attaquant de soutien",
+            "Ailier",
+            "Buteur",
+            "Milieu relayeur",
+            "Milieu récupérateur",
+            "Milieu polyvalent",
+            "Milieu excentré",
+            "Attaquant pivot",
+            "Attaquant de rupture",
+            "Deuxième attaquant",
+            "Défenseur latéral",
+            "Défenseur axial",
+            "Défenseur polyvalent"
+        ];
 
-        // Générer les personnages aléatoirement
+        const minAge = 16;
+        const maxAge = 50;
+        const minNoteGenerale = 40;
+        const maxNoteGenerale = 100;
+        const minCompetence = 0;
+        const maxCompetence = 5;
+
+        const noteRangePercentages = [
+            { range: [40, 60], percentage: 50 },
+            { range: [61, 80], percentage: 30 },
+            { range: [81, 90], percentage: 10 },
+            { range: [91, 100], percentage: 10 }
+        ];
+
+        const ageRangePercentages = [
+            { range: [16, 20], percentage: 50 },
+            { range: [21, 30], percentage: 30 },
+            { range: [31, 40], percentage: 10 },
+            { range: [41, 50], percentage: 10 }
+        ];
+
+        const competenceRangePercentages = [
+            { range: [0, 0], percentage: 60 },
+            { range: [1, 2], percentage: 20 },
+            { range: [3, 4], percentage: 10 },
+            { range: [5, 5], percentage: 10 }
+        ];
+
         for (let i = 0; i < numCharacters; i++) {
             const name = names[Math.floor(Math.random() * names.length)];
             const lastName = lastNames[Math.floor(Math.random() * lastNames.length)];
             const poste = postes[Math.floor(Math.random() * postes.length)];
-            const age = Math.floor(Math.random() * (maxAge - minAge + 1)) + minAge;
-            const noteGenerale = Math.floor(Math.random() * (maxNoteGenerale - minNoteGenerale + 1)) + minNoteGenerale;
-            const competence = Math.floor(Math.random() * (maxCompetence - minCompetence + 1)) + minCompetence;
-            const marketValue = calculateMarketValue(age, noteGenerale, maxAge, minNoteGenerale);
+            const noteGenerale = generateRandomByPercentage(noteRangePercentages, minNoteGenerale, maxNoteGenerale);
+            const age = generateRandomByPercentage(ageRangePercentages, minAge, maxAge);
+            const competence = generateRandomByPercentage(competenceRangePercentages, minCompetence, maxCompetence);
+            const marketValue = calculateMarketValue(age, noteGenerale, poste, competence);
 
-            const characterId = generateUniqueId(name, lastName, age); // Générer un ID unique pour chaque personnage
+            const characterId = generateUniqueId(name, lastName, age);
 
             const character = document.createElement("div");
-            character.innerHTML = "<div class='block p-2'><div class='w-full flex items-center justify-between'><p>" + name + " " + lastName + ", " + poste + ", " + age + " ans, " + noteGenerale + " de général, " + competence + " de compétence </p></div><div class='w-full flex items-center justify-between'><p>"+ marketValue.toLocaleString() + " € de marketvalue</p><p>" + characterId + "</p></div></div>";
-            character.className = "character-row character-row-" + i; // Ajouter une classe unique
-            character.id = characterId; // Ajouter un ID unique
+            character.innerHTML = `<div class='block p-2'>
+              <div class='w-full flex items-center justify-between'>
+                <p>${name} ${lastName}, ${poste}, ${age} ans, ${noteGenerale} de général, ${competence} de compétence</p>
+              </div>
+              <div class='w-full flex items-center justify-between'>
+                <p>${marketValue.toLocaleString()} € de valeur marchande</p>
+                <p>${characterId}</p>
+              </div>
+            </div>`;
+            character.className = `character-row character-row-${i}`;
+            character.id = characterId;
 
             characterList.appendChild(character);
-            console.log(character)
+            console.log(character);
         }
 
         // Appliquer des couleurs différentes aux lignes et ajuster la couleur du texte
         const rows = document.getElementsByClassName("character-row");
         for (let j = 0; j < rows.length; j++) {
-            const backgroundColor = getRandomColor(); // Obtenir une couleur de fond aléatoire
-            rows[j].style.backgroundColor = backgroundColor; // Appliquer la couleur de fond
-
-            // Vérifier si la couleur de fond est trop sombre
-            rows[j].style.color = isColorTooDark(backgroundColor) ? "#ffffff" : "#000000"; // Appliquer la couleur du texte
+            const backgroundColor = getRandomColor();
+            rows[j].style.backgroundColor = backgroundColor;
+            rows[j].style.color = isColorTooDark(backgroundColor) ? "#ffffff" : "#000000";
         }
     }
 
@@ -666,61 +713,83 @@
         return name + lastName + age + "_" + uniqueId;
     }
 
-    // Fonction pour calculer la valeur de marché d'un joueur
-    function calculateMarketValue(age, noteGenerale, maxAge, minNoteGenerale) {
-        const baseValue = Math.floor(Math.random() * (maxAge - age + 1)) + age;
-        let ageFactor, noteFactor;
+    function calculateMarketValue(age, noteGenerale, poste, competence) {
+        const baseValue = Math.floor(Math.random() * age);
+        let ageFactor, noteFactor, posteFactor, competenceFactor;
 
-        // Déterminer le facteur d'âge en fonction de l'âge du joueur
         if (age === 16) {
             ageFactor = 75;
-        }else if (age === 17) {
-            ageFactor = 72;
-        } else if (age === 18) {
-            ageFactor = 70;
-        } else if (age === 19) {
-            ageFactor = 65;
-        } else if (age >= 20 && age <= 25) {
-            ageFactor = 60;
+        } else if (age >= 17 && age <= 20) {
+            ageFactor = 100;
+        } else if (age >= 21 && age <= 25) {
+            ageFactor = 75;
         } else if (age >= 26 && age <= 30) {
             ageFactor = 50;
         } else if (age >= 31 && age <= 35) {
-            ageFactor = 40;
-        } else if (age >= 36 && age <= 40) {
             ageFactor = 25;
-        }else {
-            ageFactor = 1;
+        } else if (age >= 36 && age <= 40) {
+            ageFactor = 10;
+        } else {
+            ageFactor = 2;
         }
 
-        // Déterminer le facteur de note en fonction de la note générale du joueur
-        if (noteGenerale <= 50) {
-            noteFactor = 1;
-        } else if (noteGenerale >= 51 && noteGenerale <= 60){
+        if (noteGenerale >= 40 && noteGenerale <= 60) {
             noteFactor = 10;
-        } else if (noteGenerale >= 61 && noteGenerale <= 65){
-            noteFactor = 15;
-        } else if (noteGenerale >= 66 && noteGenerale <= 70){
-            noteFactor = 20;
-        } else if (noteGenerale >= 71 && noteGenerale <= 75){
+        } else if (noteGenerale >= 61 && noteGenerale <= 80) {
             noteFactor = 25;
-        } else if (noteGenerale >= 76 && noteGenerale <= 80){
-            noteFactor = 35;
-        } else if (noteGenerale >= 81 && noteGenerale <= 85){
-            noteFactor = 40;
-        } else if (noteGenerale >= 86 && noteGenerale <= 90){
-            noteFactor = 50;
-        } else if (noteGenerale >= 91 && noteGenerale <= 95){
-            noteFactor = 60;
-        } else if (noteGenerale >= 96){
+        } else if (noteGenerale >= 81 && noteGenerale <= 90) {
             noteFactor = 75;
+        } else if (noteGenerale >= 91 && noteGenerale <= 100) {
+            noteFactor = 100;
+        } else {
+            noteFactor = 2;
         }
 
-        // Calculer la valeur de marché en utilisant les facteurs d'âge et de note
-        let result = baseValue * ((maxAge - age) * ageFactor + 1) * ((noteGenerale - minNoteGenerale) * noteFactor + 1);
-        if (result <= 10000){
+        if (poste === "Gardien de but") {
+            posteFactor = 10;
+        } else if (poste === "Défenseur central" || poste === "Arrière latéral") {
+            posteFactor = 10;
+        } else if (poste === "Milieu central" || poste === "Milieu latéral" || poste === "Milieu défensif" || poste === "Milieu offensif") {
+            posteFactor = 10;
+        } else if (poste === "Avant-centre" || poste === "Attaquant de soutien" || poste === "Ailier" || poste === "Buteur") {
+            posteFactor = 25;
+        } else {
+            posteFactor = 50;
+        }
+
+        if (competence === 0) {
+            competenceFactor = 1;
+        } else if (competence >= 1 && competence <= 3) {
+            competenceFactor = 15;
+        } else if (competence === 4) {
+            competenceFactor = 50;
+        } else if (competence === 5) {
+            competenceFactor = 75;
+        } else {
+            competenceFactor = 2;
+        }
+
+        let result = baseValue * ageFactor * noteFactor * posteFactor * competenceFactor;
+        if (result <= 10000) {
             result = 10000;
         }
         return result;
+    }
+
+    function generateRandomByPercentage(rangePercentages, min, max) {
+        const randomNum = Math.random() * 100;
+        let cumulativePercentage = 0;
+
+        for (const rangePercentage of rangePercentages) {
+            cumulativePercentage += rangePercentage.percentage;
+
+            if (randomNum <= cumulativePercentage) {
+                return Math.floor(Math.random() * (rangePercentage.range[1] - rangePercentage.range[0] + 1)) + rangePercentage.range[0];
+            }
+        }
+
+        // If no range matches the random number, generate a random number within the specified overall range
+        return Math.floor(Math.random() * (max - min + 1)) + min;
     }
 </script>
 
