--- a/FootballManagerHTML/new_components.html
+++ b/FootballManagerHTML/new_components.html
@@ -691,7 +691,7 @@
             const competence = generateRandomByPercentage(competenceRangePercentages, minCompetence, maxCompetence);
             const marketValue = calculateMarketValue(age, noteGenerale, poste, competence);
 
-            const characterId = generateUniqueId(name, lastName, age);
+            const characterId = generateUniqueId();
 
             const character = {
                 name,
@@ -763,14 +763,14 @@
     }
 
     // Fonction pour générer un ID unique
-    function generateUniqueId(name, lastName, age) {
+    function generateUniqueId() {
         const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-        const length = 35;
+        const length = 50;
         let uniqueId = "";
         for (let i = 0; i < length; i++) {
             uniqueId += characters.charAt(Math.floor(Math.random() * characters.length));
         }
-        return name + lastName + age + "_" + uniqueId;
+        return uniqueId;
     }
 
     function calculateMarketValue(age, noteGenerale, poste, competence) {
@@ -778,17 +778,17 @@
         let ageFactor, noteFactor, posteFactor, competenceFactor;
 
         if (age === 16) {
-            ageFactor = 15;
+            ageFactor = 75;
         } else if (age >= 17 && age <= 20) {
-            ageFactor = 25;
+            ageFactor = 60;
         } else if (age >= 21 && age <= 25) {
-            ageFactor = 15;
+            ageFactor = 50;
         } else if (age >= 26 && age <= 30) {
-            ageFactor = 10;
+            ageFactor = 25;
         } else if (age >= 31 && age <= 35) {
-            ageFactor = 5;
+            ageFactor = 10;
         } else if (age >= 36 && age <= 40) {
-            ageFactor = 2;
+            ageFactor = 5;
         } else {
             ageFactor = 1;
         }
@@ -799,32 +799,34 @@
             noteFactor = 8;
         } else if (noteGenerale >= 81 && noteGenerale <= 90) {
             noteFactor = 15;
-        } else if (noteGenerale >= 91 && noteGenerale <= 100) {
+        } else if (noteGenerale >= 91 && noteGenerale <= 95) {
             noteFactor = 25;
+        } else if (noteGenerale >= 96 && noteGenerale <= 100) {
+            noteFactor = 75;
         } else {
             noteFactor = 1;
         }
 
         if (poste === "Gardien de but") {
             posteFactor = 10;
-        } else if (poste === "Défenseur central" || poste === "Arrière latéral") {
+        } else if (poste === "Défenseur central" || poste === "Arrière latéral" || poste === "Défenseur polyvalent") {
             posteFactor = 10;
         } else if (poste === "Milieu central" || poste === "Milieu latéral" || poste === "Milieu défensif" || poste === "Milieu offensif") {
             posteFactor = 10;
         } else if (poste === "Avant-centre" || poste === "Attaquant de soutien" || poste === "Ailier" || poste === "Buteur") {
             posteFactor = 10;
         } else {
-            posteFactor = 25;
+            posteFactor = 20;
         }
 
         if (competence === 0) {
             competenceFactor = 1;
         } else if (competence >= 1 && competence <= 3) {
-            competenceFactor = 5;
+            competenceFactor = 1.5;
         } else if (competence === 4) {
-            competenceFactor = 10;
+            competenceFactor = 2;
         } else if (competence === 5) {
-            competenceFactor = 25;
+            competenceFactor = 2.5;
         } else {
             competenceFactor = 2;
         }
@@ -832,6 +834,9 @@
         let result = baseValue * ageFactor * noteFactor * posteFactor * competenceFactor;
         if (result <= 10000) {
             result = 10000;
+        }
+        if(age >= 30){
+            result * 3;
         }
         return result;
     }
@@ -848,7 +853,6 @@
             }
         }
 
-        // If no range matches the random number, generate a random number within the specified overall range
         return Math.floor(Math.random() * (max - min + 1)) + min;
     }
 </script>
